<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dear Diary</string>
    <string name="action_settings">Settings</string>
    <string name="security_question">Security Question</string>
    <string name="change_password">Change password</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="title_activity_dear_diary">DearDiary</string>
    <string name="title_activity_dear_diary_sign_up">DearDiarySignUp</string>
    <string name="title_activity_firstpage">Dear Diary</string>
    <string name="title_activity_friendinfo">Dear Diary</string>
    <string name="title_activity_friendinfo1">Friends Information</string>
    <string name="title_activity_friend_details">FriendDetails</string>
    <string name="title_activity_model">Model</string>
    <string name="title_activity_password__recovery">Password Recovery</string>
    <string name="title_activity_bank_info">Dear Diary</string>
    <string name="hello_world">Hello world!</string>
    <string name="bank_user_name">Name :</string>
    <string name="bank_account">Account No :</string>
    <string name="bank_name">Bank Name :</string>
    <string name="bank_location">Bank Location :</string>
    <string name="bank_save">Save</string>
    <string name="title_activity_bank_info1">Dear Diary</string>
    <string name="bank_info_button">Add new account info</string>
    <string name="title_activity_bank_details">BankDetails</string>
    <string name="friend_update">Update</string>
    <string name="friend_delete">Delete</string>
    <string name="title_activity_update_friends">UpdateFriends</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="mobile">Mobile</string>
    <string name="anniversary">Annirversary</string>
    <string name="email">Email Address</string>
    <string name="gender">Gender</string>
    <string name="gender_f">Female</string>
    <string name="gender_m">Male</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="login">LOGIN</string>
    <string name="_username">Username</string>
    <string name="_password">Password</string>
    <string name="_forgot_pass">Forgot Your Password?</string>
    <string name="_signup">Haven\'t Got an Account Yet?</string>
    <string name="_account_no">Account Number</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="_title">Title</string>
        <string name="_description">Description</string>
        <string name="_when">When</string>
                <string name="cancel">Cancel</string>
        
        
</resources>
