<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/app_bg"
    tools:context=".BankInfo" >

    <EditText
        android:id="@+id/bank_name_editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bank_name_textView"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/bank_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bank_uname_editText"
        android:layout_below="@+id/bank_uname_editText"
        android:layout_marginTop="26dp"
        android:text="@string/bank_account"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/bank_account_editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bank_account_textView"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/_account_no"
        android:inputType="number" >

    </EditText>

    <Button
        android:id="@+id/save_bankinfo_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"     
        android:text="@string/bank_save" />

    <TextView
        android:id="@+id/bank_uname_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bank_account_editText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/bank_user_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/bank_uname_editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bank_uname_textView"
        android:layout_below="@+id/bank_uname_textView"
        android:layout_marginTop="17dp"
        android:hint="@string/_username"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/bank_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bank_account_editText"
        android:layout_centerVertical="true"
        android:text="@string/bank_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/bank_locaion_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bank_name_editText"
        android:layout_below="@+id/bank_name_editText"
        android:layout_marginTop="18dp"
        android:text="@string/bank_location"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/bank_location_editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_bankinfo_button"
        android:layout_alignLeft="@+id/save_bankinfo_button"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

</RelativeLayout>
