<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Reminder" >

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/_title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/title_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_tv"
        android:layout_marginTop="25dp"
        android:hint="@string/_title"
        android:inputType="text" />

    <TextView
        android:id="@+id/desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_et"
        android:layout_marginTop="30dp"
        android:text="@string/_description"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/desc_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_tv"
        android:layout_marginTop="25dp"
        android:hint="@string/_description"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/when_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_et"
        android:layout_marginTop="30dp"
        android:text="@string/_when"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/when_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:weightSum="100" >

        <EditText
            android:id="@+id/when_date_et"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/_description"
            android:inputType="date"
            android:layout_weight="50" />

        <EditText
            android:id="@+id/when_time_et"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="25dp"
            android:hint="@string/_description"
            android:inputType="time"
            android:layout_weight="50" />
    </LinearLayout>
<LinearLayout
    android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" 
        android:weightSum="100">
    <Button
        android:id="@+id/save_reminder_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" 
        android:layout_weight="50"/>

    <Button
        android:id="@+id/cancel_reminder_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:text="@string/cancel"
        android:layout_marginLeft="100dp"        
        android:layout_weight="50" />
    
    </LinearLayout>

</RelativeLayout>